# c-calculator

./: CMakeLists.txt  README.md
src/: main.c
src/infix/: CMakeLists.txt  infix.c  infix.h
src/queue/: CMakeLists.txt  queue.c  queue.h
src/rpn/: CMakeLists.txt  rpn.c  rpn.h
src/stack/: CMakeLists.txt  stack.c  stack.h
src/utilities/: CMakeLists.txt  utilities.c  utilities.h
tests/: testsuite.sh
